--- a/src/App.module.css
+++ b/src/App.module.css
@@ -48,6 +48,27 @@ body {
     z-index: 10; /* Ensure it is on top */
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: center; /* Center the buttons horizontally */
+    gap: 10rem; /* Space between the buttons */
+    position: fixed;
+    bottom: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .placePixelButton, .governPixelsButton {
+    padding: 0.5rem 1rem;
+    background-color: #ffffff;
+    border: 1px solid #000000;
+    color: #000000;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 100; /* Ensure it's above other elements */
+  }
+  
+
 .apps {
     position: absolute;
     top: calc(50px + 1rem);
