--- a/src/components/MenuBar/MenuBar.module.css
+++ b/src/components/MenuBar/MenuBar.module.css
@@ -9,4 +9,8 @@
 .menuButton { /* Add this class */
     @apply text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded;
 }
-        /* // <div className="flex items-center justify-between p-4 bg-gray-800"> */
+
+.timer {
+    @apply text-yellow-300 text-4xl absolute left-1/2 transform -translate-x-1/2;
+    font-family: 'VT323', monospace;
+}
