--- a/src/App.module.css
+++ b/src/App.module.css
@@ -90,3 +90,60 @@ body {
 .blur-background {
   filter: blur(5px);
 }
+
+.proposalListContainer {
+  position: absolute;
+  top: 64px;
+  left: 10px;
+  width: 420px;
+  max-height: calc(100vh - 64px);
+  background: rgba(31, 41, 55, 0.75);
+  border-radius: 8px;
+  overflow-y: hidden;
+  z-index: 1000;
+  padding: 16px;
+  padding-bottom: 0%;
+}
+
+.closeButton {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  background: red;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 4px 8px;
+  cursor: pointer;
+}
+
+.openButton {
+  position: fixed;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background: blue;
+  color: white;
+  border: none;
+  border-radius: 4px 0 0 4px;
+  padding: 16px;
+  cursor: pointer;
+  z-index: 1000;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+}
+
+.bg-opacity-50 {
+  background-color: rgba(31, 41, 55, 0.5);
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.hidden {
+  transform: translateY(-100%);
+}
+
+.rotate-180 {
+  transform: rotate(180deg);
+}
